# rustiplix

./: .gitignore  .knit.toml  Cargo.toml  Knitfile  README.md
.cargo/: config.toml
.github/workflows/: test.yaml
bootloader/: Cargo.toml  bootloader.rs  lib.rs  payload.s  uart.rs
bootloader/arch/riscv64/: monitor.s
doc/: dev-tools.md
kernel/: Cargo.toml  align.rs  bit.rs  bitfield.rs  cpu.rs  crc.rs  elf.rs  fmt.rs  kmain.rs  lib.rs  primary.rs  proc.rs  schedule.rs  start.rs  sys.rs  syscall.rs  timer.rs  trap.rs  vm.rs
kernel/alloc/: mod.rs  pg.rs
kernel/arch/: mod.rs
kernel/arch/riscv64/: cpu.rs  csr.rs  fwi.rs  mod.rs  regs.rs  timer.rs  trap.rs  user.s  vm.rs
kernel/arch/riscv64/monitor/: debug.rs  init.rs  mod.rs  monitor.s  trap.rs
kernel/board/: mod.rs  virt.rs  visionfive2.rs
kernel/builtin/: alloc.rs  backtrace.rs  mem.rs  mod.rs  panic.rs
kernel/dev/: mod.rs
kernel/dev/irq/: mod.rs  sfclint.rs
kernel/dev/uart/: dwapb.rs  mod.rs  virt.rs
kernel/fmt/: print.rs
kernel/kalloc/: global.rs  kr.rs  mod.rs  pg.rs  place.rs
kernel/sync/: fence.rs  irqlock.rs  mod.rs  spinlock.rs
kernel/uart/: uart.rs
kmain/: Cargo.toml  entry.s  kmain.rs  lib.rs
kmain/arch/riscv64/: kernel.s
lib/: lib.rs
link/: virt.ld
link/virt/: bootloader.ld  kernel.ld
link/visionfive2/: kernel.ld
tools/: pre-commit  rust-project.sh
user/hello/: build.knit  hello.c
