[package]
name = "bootloader"
version = "0.1.0"
authors = ["Zachary Yedidia"]
edition = "2021"

[lib]
path = "lib.rs"
crate-type = ["staticlib"]

[dependencies]
kernel = { path = "../kernel", features = ["monitor"], default-features = false }

[features]
default = ["virt"]
virt = ["kernel/monitor", "kernel/virt"]
visionfive2 = ["kernel/monitor", "kernel/visionfive2"]
