[package]
name = "kmain"
version = "0.1.0"
authors = ["Zachary Yedidia"]
edition = "2021"

[lib]
path = "lib.rs"
crate-type = ["staticlib"]

[dependencies]
kernel = { path = "../kernel", features = ["kernel"], default-features = false }

[features]
default = ["virt"]
virt = ["kernel/kernel", "kernel/virt"]
visionfive2 = ["kernel/kernel", "kernel/visionfive2"]
